--- a/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
@@ -1,5 +1,8 @@
+body{
+  overflow: auto !important;
+}
 #mapa {
-  height:350px;
+  height:400px;
   width: 100%;
   position: relative;
   margin-top: 0px;
@@ -134,11 +137,233 @@ nav .brand-logo {
 }
 /*  END CONTAINER SEARCH */
 
-/* CONTAINER MAP */
+/* CONTAINER MAP AND OPTIONS */
 .container-map{
-  margin-top: 20px;
+  margin: 20px 10px;
 }
-/*  END CONTAINER MAP */
+
+.wrap-map{
+  /* padding: 0 !important; */
+  padding-right: 10px !important;
+  padding-left: 0 !important;
+}
+/* options */
+.wrap-options{
+  background: #424242;
+  height: 400px;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
+.check-option{
+  /* border: 1px solid red; */
+  /* margin: 5px 0; */
+  padding: 5px 0;
+}
+
+.check-option .switch{
+  margin: 10px 0;
+  text-align: center;
+}
+
+.check-option .switch label{
+  color:white;
+  font-size: 12px;
+}
+
+.option-title{
+  color: white;
+  font-size: 14px;
+  background: rgba(211, 211, 211, .1);
+  padding: 2px 10px;
+  margin: 5px 0;
+}
+
+.options-line{
+  border: .3px solid gray;
+  display: block;
+}
+
+.switch label .lever:after {
+  background-color: #f5f5f5;
+}
+
+.switch label input[type=checkbox]:checked+.lever:after {
+  background-color: #54E0C7 !important;
+}
+
+.switch label input[type=checkbox]:checked+.lever {
+  background-color: rgba(84, 224, 199, .4) !important;
+}
+
+
+.radio-option {
+  /* background-color: #fff; */
+  display: block;
+  margin: 5px 0;
+  position: relative;
+}
+.radio-option label {
+  padding: 12px 30px;
+  width: 100%;
+  display: block;
+  text-align: left;
+  color: #3C454C;
+  cursor: pointer;
+  position: relative;
+  z-index: 2;
+  transition: color 200ms ease-in;
+  overflow: hidden;
+  font-size: 12px;
+  color: white;
+}
+.radio-option label:before {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  content: '';
+  background-color: #5562eb;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%) scale3d(1, 1, 1);
+          transform: translate(-50%, -50%) scale3d(1, 1, 1);
+  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
+  z-index: -1;
+}
+.radio-option label:after {
+  width: 26px;
+  height: 26px;
+  content: '';
+  border: 2px solid #D1D7DC;
+  background-color: #fff;
+  background-image: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='%23fff' fill-rule='nonzero'/%3E%3C/svg%3E ");
+  background-repeat: no-repeat;
+  background-position: -1px 0px;
+  border-radius: 50%;
+  z-index: 2;
+  position: absolute;
+  right: 30px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  cursor: pointer;
+  transition: all 200ms ease-in;
+}
+.radio-option input:checked ~ label {
+  color: #fff;
+}
+.radio-option input:checked ~ label:before {
+  -webkit-transform: translate(-50%, -50%) scale3d(56, 56, 1);
+          transform: translate(-50%, -50%) scale3d(56, 56, 1);
+  opacity: 1;
+}
+.radio-option input:checked ~ label:after {
+  background-color: #54E0C7;
+  border-color: #54E0C7;
+}
+.radio-option input {
+  width: 32px;
+  height: 32px;
+  order: 1;
+  z-index: 2;
+  position: absolute;
+  right: 30px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  cursor: pointer;
+  visibility: hidden;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+/* end options */
+/*  END CONTAINER MAP AND OPTIONS */
+
+@media (min-width:993px) and (max-width:1220px){
+  .check-option {
+    padding: 2px 0;
+  }
+
+  .check-option .switch {
+    margin: 10px 0 5px;
+  }
+
+  .check-option .switch label {
+    font-size: 0;
+  }
+
+  .option-title {
+    font-size: 12px;
+    text-align: center;
+  }
+  
+  .options-line {
+    margin: 10px 0;
+  }
+
+  .radio-option label {
+    padding: 12px 10px;
+  }
+
+  .radio-option label:after {
+    right: 10px;
+  }
+}
+
+@media screen and (max-width:992px){
+  /* CONTAINER MAP AND OPTIONS */
+  .container-map {
+    margin: 10px 5px;
+  }
+
+  .wrap-map {
+    padding: 0 !important;
+    margin-bottom: 10px;
+  }
+
+  .wrap-options {
+    height: auto;
+    overflow-y: hidden;
+    display: flex;
+    justify-content: left;
+  }
+
+  .options-line{
+    display: none;
+  }
+
+  .items-check{
+    width: 60%;
+    padding: 5px;
+    margin: 10px;
+    border: 1px solid gray;
+    border-radius: 10px;
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+  }
+
+  .check-option {
+    margin: 5px 0px;
+    padding: 0 5px;
+    width: 50%;
+  }
+
+  .items-radio{
+    width: 40%;
+    padding: 5px;
+    margin: 10px;
+    border: 1px solid gray;
+    border-radius: 10px;
+  }
+  /* END CONTAINER MAP AND OPTIONS */
+}
 
 
 @media screen and (max-width:768px){
@@ -152,6 +377,20 @@ nav .brand-logo {
     margin: 0 5px;
   }
   /* END CONTAINER SEARCH */
+
+  /* CONTAINER MAP AND OPTIONS  */
+  #mapa{
+    height: 350px;
+  }
+
+  .container-map {
+    margin: 0;
+  }
+
+  .wrap-map {
+    margin-bottom: 0;
+  }
+  /* END CONTAINER MAP AND OPTIONS */
 }
 
 @media screen and (max-width:480px){
@@ -191,6 +430,48 @@ nav .brand-logo {
     font-size: 45px;
   }
   /* END CONTAINER SEARCH */
+
+  /* CONTAINER MAP AND OPTIONS */
+  #mapa {
+    height: 250px;
+  }
+
+  .wrap-options {
+    display: block;
+    padding: 5px !important;
+  }
+
+  .options-line {
+    display: block;
+    margin-top: 5px;
+  }
+
+  .items-check {
+    width: 100%;
+    margin: 0;
+    border: none;
+    padding: 0;
+  }
+
+  .check-option{
+    margin: 5px 0 0;
+  }
+
+  .check-option:last-child{
+    width: 100%;
+  }
+
+  .check-option .switch label {
+    font-size: 0;
+  }
+
+  .items-radio {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border: none;
+  }
+  /* END CONTAINER MAP AND OPTIONS */
 }
 
 @keyframes showSearch {
