--- a/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
@@ -2,7 +2,7 @@ body{
   overflow: auto !important;
 }
 #mapa {
-  height:400px;
+  height:500px;
   width: 100%;
   position: relative;
   margin-top: 0px;
@@ -16,6 +16,13 @@ nav{
 
 nav .brand-logo {
   margin: 0 20px;
+  font-family: 'lato', sans-serif;
+  font-weight: 600;
+}
+
+nav ul a {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.1rem !important;
 }
 /* END HEADER */
 
@@ -150,9 +157,9 @@ nav .brand-logo {
 /* options */
 .wrap-options{
   background: #424242;
-  height: 400px;
+  height: 500px;
   overflow: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .check-option{
@@ -169,6 +176,7 @@ nav .brand-logo {
 .check-option .switch label{
   color:white;
   font-size: 12px;
+  font-family: 'Roboto', sans-serif;
 }
 
 .option-title{
@@ -177,6 +185,7 @@ nav .brand-logo {
   background: rgba(211, 211, 211, .1);
   padding: 2px 10px;
   margin: 5px 0;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .options-line{
@@ -295,6 +304,8 @@ nav .brand-logo {
   /* border: 1px solid blue; */
   margin: 5px 0;
   padding: 0;
+  /* background: url('./../images/fondos/puntos.jpg'); */
+  /* background: url('./../images/fondos/edificios.jpg'); */
 }
 
 .title-option{
@@ -302,14 +313,44 @@ nav .brand-logo {
   padding: 10px;
   display: flex;
   justify-content: center;
+  text-align: center;
+  position: relative;
+  cursor: pointer;
 }
 
+/* .title-option ~ .inputs-option{
+  animation: hideContainerForm 1.2s 1 linear forwards;
+} */
+
 .wrap-form:nth-child(odd) .title-option{
-  background: #80deea;
+  /* background: #80deea; */
+  background: #3c415e;
 }
 
 .wrap-form:nth-child(even) .title-option{
-  background: #3949ab;
+  /* background: #3949ab; */
+  background: #738598;
+}
+
+.wrap-form:nth-child(3) .title-option{
+  background: #dfe2e2;
+}
+
+.wrap-form:nth-child(6) .title-option{
+  background: #1cb3c8;
+}
+
+.wrap-form .title-option.no-visible{
+  background: #2b2726 !important;
+}
+
+.title-option i{
+  position: absolute;
+  top: 28%;
+  left: 10px;
+  color: white;
+  font-size: 30px;
+  transform: rotate(45deg)
 }
 
 .title-option p{
@@ -317,23 +358,35 @@ nav .brand-logo {
   font-size: 26px;
   text-transform: uppercase;
   margin: 0;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .inputs-option{
   border-top: none;
-  padding: 1px 30px 10px 30px;
+  padding: 10px 30px 10px 30px;
+  height: 400px;
+  overflow-y: auto;
+  margin-bottom: 10px;
+}
+
+.wrap-form .input-field input[type=text]:not(.browser-default){
+  border: 1px solid #eeeeee;
+  border-radius: 4px;
+  padding: 2px 5px;
+  background: #fafafa !important;
+  margin-top:3px;
+  box-sizing: border-box;
 }
 
 .wrap-form .input-field input[type=text]:not(.browser-default):focus:not([readonly]){
   /* border-bottom: none; */
-  border-bottom: 1px solid #c8e6c9;
+  border: 1px solid #c8e6c9;
   box-shadow: 0 1px 0 0 #c8e6c9;
 }
-
-
 /* END CONTAINER FORM */
 
 @media (min-width:993px) and (max-width:1220px){
+  /* CONTAINER MAP AND OPTIONS */
   .check-option {
     padding: 2px 0;
   }
@@ -362,6 +415,13 @@ nav .brand-logo {
   .radio-option label:after {
     right: 10px;
   }
+  /* END CONTAINER MAP AND OPTIONS */
+
+  /* CONTAINER FORM */
+  .title-option p {
+    font-size: 22px;
+  }
+  /* END CONTAINER FORM */
 }
 
 @media screen and (max-width:992px){
@@ -439,6 +499,24 @@ nav .brand-logo {
     margin-bottom: 0;
   }
   /* END CONTAINER MAP AND OPTIONS */
+
+  /* CONTAINER FORM */
+  .title-option p {
+    font-size: 18px;
+  }
+
+  .title-option i {
+    position: absolute;
+    top: 23%;
+    left: 5px;
+    font-size: 26px;
+  }
+
+  .inputs-option {
+    padding: 5px 20px 5px 20px;
+    /* height: 250px; */
+  }
+  /* END CONTAINER FORM */
 }
 
 @media screen and (max-width:480px){
@@ -520,6 +598,25 @@ nav .brand-logo {
     border: none;
   }
   /* END CONTAINER MAP AND OPTIONS */
+
+  /* CONTAINER FORM */
+  .container-form {
+    margin: 0px;
+  }
+
+  .title-option {
+    padding: 5px;
+  }
+
+  .title-option p {
+    font-size: 14px;
+  }
+
+  .title-option i {
+    top: 12%;
+    font-size: 24px;
+  }
+  /* END CONTAINER FORM */
 }
 
 @keyframes showSearch {
@@ -563,3 +660,42 @@ nav .brand-logo {
     transform: rotate(360deg);
   }
 }
+
+@keyframes hideContainerForm {
+  from {
+    height: 400px;
+  }
+  to {
+    height: 0;
+    padding: 0;
+  }
+}
+
+@keyframes showContainerForm {
+  from {
+    height: 0;
+  }
+  to {
+    height: 400px;
+  }
+}
+
+@keyframes rotateXClose {
+  from{
+    transform: rotate(45deg)
+  }
+  to {
+    transform: rotate(90deg)
+  }
+}
+
+
+@keyframes rotateXOpen {
+  from{
+    transform: rotate(90deg)
+  }
+  to {
+    transform: rotate(45deg)
+  }
+}
+
