--- a/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
@@ -38,9 +38,17 @@ nav ul a {
   padding: 20px;
   position: relative;
 }
+
+.container-search h5{
+  margin: 0;
+  color: white;
+  padding: 10px 0px;
+  display: none;
+  text-align: center;
+}
 .hide-search{
   position: absolute;
-  top: 0;
+  top: -8px;
   right: 0;
   color: white;
   cursor: pointer;
@@ -90,6 +98,12 @@ nav ul a {
   /* border: 1px solid #2d384a; */
 }
 
+.btns-search{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
 .btn-search{
   background: gray;
   padding: 10px 30px;
@@ -104,11 +118,11 @@ nav ul a {
 }
 
 .btn-search:hover, .hide-search:hover i{
-  transform: scale(1.02)
+  transform: scale(1.02);
 }
 
 .btn-search:active, .hide-search:active i{
-  transform: scale(0.9)
+  transform: scale(0.9);
 }
 
 .search-primary{
@@ -190,6 +204,11 @@ nav ul a {
   padding: 2px 10px;
   margin: 5px 0;
   font-family: 'Montserrat', sans-serif;
+}
+
+.option-active{
+  background: #5562eb;
+  transition: 1s;
 }
 
 .options-line{
@@ -507,6 +526,9 @@ nav ul a {
 
 @media screen and (max-width:768px){
   /* CONTAINER SEARCH */
+  .container-search {
+    padding: 0px;
+  }
   .wrap-search .input-field {
     padding: 5px 10px;
   }
@@ -567,9 +589,14 @@ nav ul a {
     height: 190px;
   }
 
-  .row-search {
-    align-items: flex-end;
+  .container-search h5 {
+    padding: 20px 0;
+    font-size: 14px;
   }
+
+  /* .row-search {
+    align-items: flex-end;
+  } */
 
   .wrap-search {
     flex-direction: column;
@@ -582,6 +609,10 @@ nav ul a {
     margin: 5px 0;
   }
 
+  .btns-search{
+    width: 100%;
+  }
+
   .btn-search {   
     width: 100%;
     text-align: center;
@@ -589,7 +620,7 @@ nav ul a {
   }
 
   .hide-search {
-    top: -9px;
+    top: 0px;
     right: 0px;
   }
 
