--- a/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
@@ -326,12 +326,11 @@ nav ul a {
 .wrap-form{
   margin: 5px 0;
   padding: 0;
-  transition: 1s;
+  transition: .5s;
 }
 
 .wrap-form:hover {
-  transform: scale(1.05);
-  z-index: 99999;
+  transform: scale(1.03);
 }
 
 .title-option{
@@ -395,11 +394,30 @@ nav ul a {
   background: #fafafa !important;
   margin-top:3px;
   box-sizing: border-box;
+  color:gray;
+}
+
+.select-wrapper input.select-dropdown {
+  margin-bottom: 20px !important;
 }
 
 .wrap-form .input-field input[type=text]:not(.browser-default):focus:not([readonly]){
   border: 1px solid #c8e6c9;
   box-shadow: 0 1px 0 0 #c8e6c9;
+}
+
+.dropdown-content li>span {
+  color: #1565c0 !important;
+}
+
+textarea.materialize-textarea {
+  padding-top: 30px !important;
+}
+
+textarea.materialize-textarea:focus:not([readonly]) {
+  border-bottom: 1px solid #c8e6c9 !important;
+  -webkit-box-shadow: 0 1px 0 0 #c8e6c9 !important;
+  box-shadow: 0 1px 0 0 #c8e6c9 !important;
 }
 /* END CONTAINER FORM */
 
