--- a/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
@@ -2,13 +2,17 @@ body{
   overflow: auto !important;
 }
 #mapa {
-  height:500px;
+  height:540px;
   width: 100%;
   position: relative;
   margin-top: 0px;
 }
 
 /* HEADER */
+.navbar-fixed {
+  z-index: 9997;
+}
+
 nav{
   background: #2d384a !important;
   box-shadow: none !important;
@@ -284,12 +288,12 @@ nav ul a {
 .wrap-map{
   /* padding: 0 !important; */
   padding-right: 10px !important;
-  padding-left: 0 !important;
+  /* padding-left: 0 !important; */
 }
 /* options */
 .wrap-options{
   background: #424242;
-  height: 500px;
+  height: 540px;
   overflow: hidden;
   overflow-y: auto;
 }
@@ -443,6 +447,7 @@ nav ul a {
 .container-form{
   /* border: 1px solid red; */
   margin: 10px;
+  margin-right: 0;
 }
 
 .wrap-form{
@@ -681,12 +686,13 @@ body.swal2-toast-shown .swal2-container.swal2-shown {
 @media screen and (max-width:992px){
   /* CONTAINER MAP AND OPTIONS */
   .container-map {
-    margin: 10px 5px;
+    /* margin: 10px 5px; */
+    margin: 0;
   }
 
   .wrap-map {
     padding: 0 !important;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
   }
 
   .wrap-options {
@@ -791,6 +797,9 @@ body.swal2-toast-shown .swal2-container.swal2-shown {
   /* END CONTAINER MAP AND OPTIONS */
 
   /* CONTAINER FORM */
+  .container-form {
+    margin: 0px;
+  }
   .title-option p {
     font-size: 18px;
   }
