--- a/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
@@ -874,6 +874,15 @@ body.swal2-toast-shown .swal2-container.swal2-shown {
 }
 /*  end estilos alert toast pisados */
 
+.btn-reportes-movil{ 
+    display: none; 
+} 
+ 
+.iframe-reporte{ 
+    width: 100% !important; 
+    height: 500px; 
+} 
+
 /* END CONTAINER OPTIONS BUTTONS */
 
 /* FOOTER */
@@ -893,6 +902,15 @@ body.swal2-toast-shown .swal2-container.swal2-shown {
   font-family: 'Roboto', sans-serif;
 }
 /* END FOOTER */
+
+/*VENTANA DE IMPRESION */ 
+.modal { 
+  top: 40%!important; 
+  overflow: hidden!important; 
+  width: 11%!important; 
+} 
+ 
+/* */ 
 
 @media (min-width:993px) and (max-width:1220px){
   /* CONTAINER MAP AND OPTIONS */
@@ -1180,6 +1198,17 @@ body.swal2-toast-shown .swal2-container.swal2-shown {
     width: 60px;
   }
   /* END CONTAINER FOOTER */
+  
+  /* CONTAINER OPTIONS BUTTONS */ 
+  .btn-reportes-desktop{ 
+      display: none; 
+  } 
+   
+  .btn-reportes-movil{ 
+      display: block; 
+  } 
+   
+  /* END CONTAINER OPTIONS BUTTONS */ 
   
   #btn-top {
     right: 25px;
