acomodo de algunos swalert y reducción código función  callServicePunteo

--- a/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
@@ -882,6 +882,23 @@ body.swal2-toast-shown .swal2-container.swal2-shown {
   width: 100% !important;
   height: 100% !important;
 }
+
+.swal2-icon {
+  height: 4.5em !important;
+  line-height: 4.5em !important;
+}
+
+.swal2-icon.swal2-error [class^=swal2-x-mark-line][class$=left] {
+  left: 0.6em !important;
+}
+
+.swal2-icon.swal2-error [class^=swal2-x-mark-line][class$=right] {
+  right: .8em !important;
+}
+
+.swal2-icon.swal2-error [class^=swal2-x-mark-line] {
+  top: 2.1em !important;
+}
 /*  end estilos alert toast pisados */
 
 .btn-reportes-movil{ 
