--- a/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
@@ -544,9 +544,13 @@ nav ul a {
   content: '';
   border: 2px solid #D1D7DC;
   background-color: #fff;
-  background-image: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='%23fff' fill-rule='nonzero'/%3E%3C/svg%3E ");
+  /* background-image: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='%23fff' fill-rule='nonzero'/%3E%3C/svg%3E "); */
+  /* background-image: url('./../images/iconos/checked.svg'); */
+  background: url('./../images/iconos/checked.png');
   background-repeat: no-repeat;
-  background-position: -1px 0px;
+  /* background-position: -1px 0px; */
+  background-position: center center;
+  background-size: 15px;
   border-radius: 50%;
   z-index: 2;
   position: absolute;
